systeme de forum par jeux en place

--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -19,6 +19,8 @@
             height: 100vh;
             flex-direction: column;
             text-align: center;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         h1 {
@@ -51,7 +53,7 @@
 
         /* Section avec un fond */
         .container{
-            background-color: rgba(10, 50, 95, 0.38); 
+            background-color: rgba(17, 63, 116, 0.38); 
             padding: 40px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -97,7 +99,7 @@
             <p> OU </p>
             <a href="/signin">INSCRIPTION</a>
         </div>
-        <a class="jeux" href="/forum_games">Voir les jeux</a>
+        <a class="jeux" href="/games">Voir les jeux</a>
         
     </div>
 </body>
